<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pubnet Auto Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username">ユーザー名</string>
    <string name="password">パスワード</string>
    <string name="login">ログインする</string>
    <string name="logout">ログアウトする</string>
    <string name="setting">設定画面を開く</string>
    <string name="save">保存する</string>

    <string name="login_guide_login">Titech Pubnetへのログイン・ログアウトを行います。</string>
    <string name="login_guide_setting">ユーザー名とパスワードを設定します。</string>
    <string name="setting_guide">ユーザー名とパスワードは平文で端末に保存されます。</string>

    <string name="login_toast_login">ログインしました。</string>
    <string name="login_toast_logout">ログアウトしました。</string>
    <string name="login_toast_empty">設定が完了していないため実行できません。</string>
    <string name="login_toast_error">エラーが発生しました。</string>
    <string name="setting_toast_empty">入力値が空のため保存できません。</string>
    <string name="setting_toast_save">保存しました。</string>

</resources>
