<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tondol.pubnetautologin.app.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/login_textview_guide"
        android:text="@string/login_guide_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_textview_guide"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button_logout"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button_login" />

    <TextView
        android:id="@+id/login_textview_setting"
        android:text="@string/login_guide_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button_logout"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button_setting"
        android:text="@string/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_textview_setting"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/login_button_setting"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#ff000000">
        <TextView
            android:id="@+id/login_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:singleLine="false" />
    </ScrollView>

</RelativeLayout>
