<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tondol.pubnetautologin.app.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/setting_textview_username"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/setting_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_textview_username" />

    <TextView
        android:id="@+id/setting_textview_password"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_edittext_username"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/setting_edittext_password"
        android:password="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_textview_password" />

    <Button
        android:id="@+id/setting_button"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_edittext_password"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/setting_textview_guide"
        android:text="@string/setting_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_button"
        android:layout_marginTop="10dp" />

</RelativeLayout>
